feat: thêm chức năng tìm phòng, đăng ký user(student), sửa lại chức năng hợp đồng